--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     background-attachment: fixed;
-    background-image: url("/assets/wall.jpg");
+    background-image: url("assets/wall.jpg");
     background-size: cover;
     padding: 100px;
 
@@ -56,7 +56,7 @@ h6 {
 }
 
 .board {
-    background-image: url("/assets/board.jpeg");
+    background-image: url("assets/board.jpeg");
     background-repeat: repeat;
     background-size: 200px;
     border-radius: 60px;
@@ -69,7 +69,7 @@ h6 {
 }
 
 .form-bg {
-    background-image: url("/assets/form.png");
+    background-image: url("assets/form.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
